@@ -1,5 +1,10 @@
 2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/SDCCopt.c:
+	  Avoid emitting some unecessary bank switching calls.
+
+2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/SDCCast.c:
 	  Keep global named address spaces alive over functions.
 
